@@ -450,6 +450,7 @@ All:
   resources.
 - Added wxMessageQueue::Clear().
 - Added wxConfig::Read(float *) overload (Terry Farnham).
+- Always use decimal point (and not the current locale separator) in wxConfig.
 
 Unix:
 
